src/objects/ContactCatalog__c.object
<CustomObject>
    <description>junction object that connects Contacts with Catalogues they have purchased from</description>
    <fields>
        <fullName>Catalog_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Item</label>
        <referenceTo>OrderApi__Catalog_Item__c</referenceTo>
        <relationshipLabel>Catalog Items</relationshipLabel>
        <relationshipName>ContactCatalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog</label>
        <referenceTo>OrderApi__Catalog__c</referenceTo>
        <relationshipLabel>ContactCatalogs</relationshipLabel>
        <relationshipName>ContactCatalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ContactCatalogs</relationshipLabel>
        <relationshipName>ContactCatalogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
        <relationshipLabel>ContactCatalogs</relationshipLabel>
        <relationshipName>ContactCatalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>ContactCatalogs</relationshipLabel>
        <relationshipName>ContactCatalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Line</label>
        <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
        <relationshipLabel>ContactCatalogs</relationshipLabel>
        <relationshipName>ContactCatalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ContactCatalog</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>ContactCatalog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactCatalogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>